# Navy_Bot

./: .gitignore  README.md  build.ps1  install-extensions.ps1  package.json  requirements.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  create-icons.ps1  generate-icons.ps1  resize-icon.py
src-tauri/src/: main.rs
